--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,5 +24,24 @@
         android:layout_height="wrap_content"
         android:text="시작하기"
         android:padding="16dp"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:layout_marginBottom="20dp" />
+
+    <Button
+        android:id="@+id/continueButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="이어하기"
+        android:padding="16dp"
+        android:textSize="18sp"
+        android:layout_marginBottom="20dp" />
+
+    <Button
+        android:id="@+id/exitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="종료하기"
+        android:padding="16dp"
+        android:textSize="18sp" />
+
 </LinearLayout>
