--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -47,7 +47,8 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/sanjini" />
+        android:src="@drawable/bird_frame1"
+        android:scaleType="fitCenter" />
     <TextView
         android:id="@+id/speechBubble"
         android:layout_width="wrap_content"
