--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -38,7 +38,8 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:max="100"/>
+            android:max="100"
+            android:layout_marginBottom="8dp"/>
     </LinearLayout>
 
     <!-- 중앙 펫 이미지 -->
