--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -2,11 +2,20 @@
     android:id="@+id/gameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="0dp"
     android:background="#FFFDE7">
 
     <!-- 상단 왼쪽: 이름과 상태 -->
+    <FrameLayout
+        android:id="@+id/backgroundFragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
     <LinearLayout
+        android:padding="25dp"
         android:id="@+id/statusLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,6 +51,7 @@
             android:layout_marginBottom="8dp"/>
     </LinearLayout>
 
+
     <!-- 중앙 펫 이미지 -->
     <ImageView
         android:id="@+id/petImageView"
@@ -49,7 +59,8 @@
         android:layout_height="250dp"
         android:layout_centerInParent="true"
         android:src="@drawable/bird_frame1"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"
+        android:layout_marginTop="80dp"/>
     <TextView
         android:id="@+id/speechBubble"
         android:layout_width="wrap_content"
@@ -69,7 +80,7 @@
         android:layout_alignParentBottom="true"
         android:columnCount="2"
         android:padding="16dp"
-        android:rowCount="2"
+        android:rowCount="3"
         android:alignmentMode="alignMargins"
         android:useDefaultMargins="true">
 
@@ -100,5 +111,12 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:text="저장하기" />
+        <Button
+            android:id="@+id/changeBackgroundButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:text="배경 변경하기" />
+
     </GridLayout>
 </RelativeLayout>
