--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -26,7 +26,11 @@
         android:layout_marginBottom="16dp"
         android:textSize="16sp"
         android:padding="12dp" />
-
+    <Button
+        android:id="@+id/cameraImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="카메라로 촬영하기" />
     <!-- 먹이기 확정 버튼 -->
     <Button
         android:id="@+id/feedConfirmButton"
