--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -117,6 +117,12 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:text="배경 변경하기" />
+        <Button
+            android:id="@+id/exitButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:text="종료하기" />
 
     </GridLayout>
 </RelativeLayout>
