--- a/app/src/main/res/layout/activity_sleep.xml
+++ b/app/src/main/res/layout/activity_sleep.xml
@@ -24,8 +24,9 @@
 
         <Button
             android:id="@+id/minusButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:textSize="25sp"
             android:text="-" />
 
         <TextView
@@ -38,8 +39,9 @@
 
         <Button
             android:id="@+id/plusButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:textSize="25sp"
             android:text="+" />
     </LinearLayout>
 
